Bug 343070 - File > Quit > Cancel issue
Summary: File > Quit > Cancel issue
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-20 08:49 UTC by mvowada
Modified: 2015-01-28 20:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
"Cancel" button requires to be clicked 4 times before responding - Video (820.12 KB, video/mp4)
2015-01-20 08:52 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2015-01-20 08:49:51 UTC
Minor issue. With an unsaved document, quit the program: the cancel button requires to be clicked 4 times before to respond (Krita 2.9 Beta 2, on Ubuntu 14.04 Unity)

Reproducible: Always

Steps to Reproduce:
1. Open a document and do some modifications
2. File > Quit > Cancel

Actual Results:  
"Cancel" button requires to be clicked 4 times before responding.
Comment 1 mvowada 2015-01-20 08:52:43 UTC
Created attachment 90539 [details]
"Cancel" button requires to be clicked 4 times before responding - Video
Comment 2 Raghavendra kamath 2015-01-21 15:00:57 UTC
I have encountered this bug
Comment 3 Mikhail Sidorov 2015-01-23 12:09:50 UTC
Also, if you try to close the main window instead of quitting Krita through File->Quit then the Cancel button requires to be clicked "only" two times.
Comment 4 Dmitry Kazakov 2015-01-28 10:01:00 UTC
Git commit beec34411aca1d139c09af34343f85cac6e45605 by Dmitry Kazakov.
Committed on 28/01/2015 at 09:59.
Pushed by dkazakov into branch 'calligra/2.9'.

Remove duplicated queryClose() methods

It resulted in the necessity to press Cancel button
multiple times when closing Krita window.

M  +7    -85   krita/ui/KisDocument.cpp
M  +0    -3    krita/ui/KisDocument.h
M  +4    -48   krita/ui/KisMainWindow.cpp
M  +0    -5    krita/ui/KisMainWindow.h
M  +1    -2    krita/ui/KisView.h

http://commits.kde.org/calligra/beec34411aca1d139c09af34343f85cac6e45605
Comment 5 mvowada 2015-01-28 20:13:19 UTC
Hi and thank you. I've just rechecked with Krita 2.9 Beta 2 (git fc73166) but it seems you still need to click multiple times "Cancel" before quit the program (now it's 3 times...)