Remove duplicated queryClose() methods

It resulted in the necessity to press Cancel button
multiple times when closing Krita window.

BUG:343070